...
                            <constraint firstItem="3el-GP-zk7" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="b8u-cs-Uqu"/>
                            <constraint firstItem="3el-GP-zk7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="c1B-hC-ttc"/>
                            <constraint firstItem="3el-GP-zk7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pax-od-aGo"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="sNc-kZ-CWu">
                        <barButtonItem key="leftBarButtonItem" title="Groups" style="done" id="hp0-Qy-BGw">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="MuB-0X-VR2">
                                <rect key="frame" x="20" y="7" width="92" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Groups">
                                    <color key="titleColor" name="ThemeGreen"/>
...
